chrome/browser/resources/omnibox_popup/app.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #scheme=relative
 * #css_wrapper_metadata_end */

:host {
  --cr-searchbox-icon-container-size: 28px;
  --cr-searchbox-match-icon-container-background-fallback: var(--color-omnibox-results-background-hovered);
  --cr-searchbox-match-padding: 6px;
  --cr-searchbox-match-padding-inline-start: 16px;
  --cr-searchbox-match-text-padding-inline-start: 12px;
  --cr-searchbox-min-width: 75%;
  --cr-searchbox-results-action-chip-height: 26px;
  --cr-searchbox-results-margin-bottom: 0;
  --cr-searchbox-width: 100%;
  --cr-searchbox-match-font-weight: 700;
  font-size: 14.6px; /* closely resembles the omnibox input font size. */
  /* Colors used in the cr-searchbox results dropdown */
  --color-searchbox-answer-icon-background: var(--color-omnibox-answer-icon-g-m3-background);
  --color-searchbox-answer-icon-foreground: var(--color-omnibox-answer-icon-g-m3-foreground);
  --color-searchbox-results-action-chip-focus-outline: var(--color-omnibox-results-focus-indicator);
  --color-searchbox-results-action-chip: var(--color-omnibox-results-button-border);
  --color-searchbox-results-action-chip-icon: var(--color-omnibox-results-button-icon);
  --color-searchbox-results-action-chip-icon-selected: var(--color-omnibox-results-button-icon-selected);
  --color-searchbox-results-background: var(--color-omnibox-results-background);
  --color-searchbox-results-background-hovered: var(--color-omnibox-results-background-hovered);
  --color-searchbox-results-background-selected: var(--color-omnibox-results-background-selected);
  --color-searchbox-results-button-hover: var(--color-omnibox-results-button-ink-drop-row-hovered);
  --color-searchbox-results-button-selected-hover: var(--color-omnibox-results-button-ink-drop-row-selected);
  --color-searchbox-results-dim-selected: var(--color-omnibox-results-text-dimmed-selected);
  --color-searchbox-results-focus-indicator: var(--color-omnibox-results-focus-indicator);
  --color-searchbox-results-foreground: var(--color-omnibox-text);
  --color-searchbox-results-foreground-dimmed: var(--color-omnibox-results-text-dimmed);
  --color-searchbox-results-foreground-selected: var(--color-omnibox-results-text-selected);
  --color-searchbox-results-icon: var(--color-omnibox-results-icon);
  --color-searchbox-results-icon-container-background: unset;
  --color-searchbox-results-icon-focused-outline: var(--color-omnibox-results-focus-indicator);
  --color-searchbox-results-icon-selected: var(--color-omnibox-results-icon-selected);
  --color-searchbox-results-starter-pack-icon: var(--color-omnibox-results-starter-pack-icon);
  --color-searchbox-results-typed-prefix: unset;
  --color-searchbox-results-url-selected: var(--color-omnibox-results-url-selected);
  --color-searchbox-results-url: var(--color-omnibox-results-url);
  --color-searchbox-search-icon-background: var(--color-omnibox-results-icon);
}

/**
 * Show the secondary side if it can be shown and is currently available to be
 * shown.
 */
:host([can-show-secondary-side][has-secondary-side]) {
  --cr-searchbox-secondary-side-display: block;
}

/**
 * In debug mode, make the element take up 50% of the viewport width.
 */
:host([is-debug]) {
  display: block;
  width: 50%;
}

